--- a/wp-content/themes/snf/style.css
+++ b/wp-content/themes/snf/style.css
@@ -30,8 +30,9 @@ IX.) News
 
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 @import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
-
-
+@import url("https://use.typekit.net/esj5tsc.css");
+@import url("https://use.typekit.net/fws0qwx.css");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=swap");
 /*===================================================
     Branding
 ======================================================*/
