--- a/wp-content/themes/snf/styles/css/contact.css
+++ b/wp-content/themes/snf/styles/css/contact.css
@@ -33,6 +33,9 @@ IX.) News
 .output .country_list_elements li a{
 	text-decoration:none;
 }
+.sidebar-widget .card-body li {
+	padding: 0.5rem 0 !important;
+}
 .sidebar .card-body{
 	padding: 1.25rem .75rem;
 }
