--- a/wp-content/themes/snf/styles/css/front-page.css
+++ b/wp-content/themes/snf/styles/css/front-page.css
@@ -93,7 +93,7 @@ III.) Remy & Executives
         font-weight: 300;
     }
     .hp_cta h1, .hp_cta h2, .hp_cta h3, .hp_cta h4, .hp_cta h5, .hp_cta h6 {
-        color: #3e4555;
+        color: #002d73 !important;
     }
     .hp_cta .bg-light {
         background-color: #f4f8fa !important;
@@ -139,19 +139,24 @@ III.) Remy & Executives
         font-size: 16px;
     }
 }
-@media(min-width:768px){
+@media(max-width:991px){
     .hp_cta {
         color: #8d97ad;
         font-weight: 300;
     }
+    .hp_cta p{
+        font-weight:600;
+        font-size:.9rem !important;
+    }
     .hp_cta h1, .hp_cta h2, .hp_cta h3, .hp_cta h4, .hp_cta h5, .hp_cta h6 {
-        color: #3e4555;
+        color: #002d73 !important;
     }
     .hp_cta .bg-light {
         background-color: #f4f8fa !important;
     }
     .hp_cta .text-muted {
         color: #8d97ad !important;
+        font-size: 1.05rem;
     }
     .hp_cta .badge {
         line-height: 14px;
@@ -430,6 +435,15 @@ III.) Remy & Executives
         height: 1px;
         background-color: #bbbbbb;
     }
+    .inner-column .sec-title .title:before {
+        position: absolute;
+        content: '';
+        right: 0px;
+        bottom: 7px;
+        display: none;
+        height: 1px;
+        background-color: #bbbbbb;
+    }
     .sec-title h2{
         font-size:1.25rem;
         color: rgba(0, 0, 0, 0.4);}
@@ -588,14 +602,8 @@ III.) Remy & Executives
 
 ======================================================*/
 @media (min-width: 576px) {
-    .cta_subline{
-        position: absolute;
-        /* z-index: 11; */
-        top: -100%;/* height: 100%; */
-    }
-    .cta_subline p{
-        color: #fff;
-    }
+
+
     .highlight-section .image-column{
         position:
                 relative;
@@ -757,7 +765,10 @@ III.) Remy & Executives
         background: url(https://i.ibb.co/DKn55Qz/pattern-1.jpg) repeat;
     }
     .cta_subline p{
-        color: #212529;font-size: 1.25em;}
+        /* color: #212529; */
+        font-size: 1.25em;
+        font-weight: 600;
+    }
 }
 @media(min-width:768px){
     .branded-title-seperation .branded_title_container .heading {
@@ -794,24 +805,40 @@ III.) Remy & Executives
         background-color: #002d73;
     }
     .cta_stats{
-        padding:0 !important;
+        /* padding:0 !important; */
     }
     .hp_cta_contact{
 
-        /* position: absolute !important; *//* left: 0; *//* right: 0; *//* top: 100%; */}
+        /* position: absolute !important; */
+
+        /* left: 0; */
+
+        /* right: 0; */
+
+        /* top: 100%; */
+
+    }
     .cta_image{
-        position:relative;
-        overflow: hidden;padding: 0 !important;}
+        /* position:
+        relative; */
+        overflow: hidden;
+        padding: 0 !important;
+    }
     .hp_cta_contact h3{
-        font-size:1rem;
+        font-size: 1.45rem;
     }
     .cta_content{
-        position: relative;
+        /* position: relative; */
     }
 
     .cta_subline h3{
         /* z-index:12; */
-        /* color: #fff !important; */font-size: 1.25rem;font-weight: 600;letter-spacing: 1px;margin: unset;}
+        color: #002d73 !important;
+        font-size: 1.95rem;
+        font-weight: 800;
+        letter-spacing: 1px;
+        margin: unset;
+    }
 
 
     .highlight-section{
@@ -1049,25 +1076,34 @@ III.) Remy & Executives
         font-size: 1.05rem;
         margin-bottom: 0;
     }
-    .cta_content_overlay{
-        position:absolute;
-        height:100%;
-        width:100%;
-        background-color:rgba(0,0,0,.6);
-        top: 0;
-        left: 0;right: 0;border-radius: .25rem;
-    }
+
 }
 
 @media (min-width: 768px) {
     .news_featured{
-        background-size: cover;background-position: center;height: 9rem;
+        background-size: cover;
+        background-position: center;
+        height: 9rem;
+        border-radius: 4px  4px  0px 0px;
+    }
+    .news_featured_no_image{
+        height:9rem;
+        display:flex;
+        justify-content: center;
+        align-items:
+                center;
+        border-radius: 4px  4px  0px 0px;
+    }
+    .news_featured_no_image img{
+
+        height: 2rem;
+
     }
     #news_carousel .card-img-top {
         height: 20vw;
     }
     .carousel-inner .carousel-item {
-        /* margin-right: unset; */
+        margin-right: unset;
     }
     #news_carousel .card-body h2{
         font-size:1.15rem;
@@ -1103,7 +1139,7 @@ III.) Remy & Executives
     }
 
     #news_carousel a.btn{
-        padding:0;
+        /* padding:0; */
     }
     #news_carousel .card-body, #news_carousel .card-footer {
         padding:.5rem 1.25rem;
@@ -1174,7 +1210,8 @@ III.) Remy & Executives
         margin-right: inherit;
     }
     #news_carousel .card-body h2{
-        font-size:1.15rem;
+        font-size: 1.1rem;
+        font-weight: 600;
     }
     #news_carousel .carousel-inner{
         background-color:#fff;
@@ -1215,10 +1252,37 @@ III.) Remy & Executives
     }
 }
 @media(max-width:767px){
+    .cta_subline h3{
+        font-size:1.5rem;
+        font-weight:600;
+        color:#002d73;
+    }
+    .cta_subline{
+        /* position: absolute; */
+        /* z-index: 11; */
+        /* top: 0; *//* height: 100%; */
+    }
+    .cta_subline p{
+        /* color: #fff; */
+    }
+    .cta_image{
+
+        display: flex;position: relative;justify-content: center;align-items: center;width: 100%;}
+    .cta_image img{
+        height:10vh;
+        /* text-align: center; *//* margin-right: auto; */}
+    .cta_content_overlay{
+        /* position:absolute; */
+        /* height:100%; */
+        /* width:100%; */
+        /* background-color:rgba(0,0,0,.6); */
+        /* top: 0; */
+        /* left: 0; *//* right: 0; *//* border-radius: .25rem; */
+    }
     .introduction .introduction-title h2{
         display:none;
     }
-     .news_featured{
+    .news_featured{
         background-size: cover;background-position: center;height: 9rem;
     }
     #news_carousel .card-img-top {
@@ -1226,6 +1290,19 @@ III.) Remy & Executives
     }
     .carousel-inner .carousel-item {
         /* margin-right: unset; */
+    }
+    .news_featured_no_image{
+        height:10rem;
+        display:flex;
+        justify-content: center;
+        align-items:
+                center;
+        border-radius: 4px  4px  0px 0px;
+    }
+    .news_featured_no_image img{
+
+        height: 2rem;
+
     }
     #news_carousel .card-body h2{
         font-size:1.15rem;
@@ -1261,7 +1338,7 @@ III.) Remy & Executives
     }
 
     #news_carousel a.btn{
-        padding:0;
+        /* padding:0; */
     }
     #news_carousel .card-body, #news_carousel .card-footer {
         padding:.5rem 1.25rem;
@@ -1442,9 +1519,9 @@ III.) Remy & Executives
         text-transform: uppercase;
         color: #002d73;
         margin-bottom: 0;}
-     .branded-title-seperation .branded_title_container h6{
-         margin-top:5px;
-     }
+    .branded-title-seperation .branded_title_container h6{
+        margin-top:5px;
+    }
     .oval-overlay .branded-title-seperation .branded_title_container h2:before {
 
         background-color: #fff;
@@ -1459,18 +1536,19 @@ III.) Remy & Executives
         content: "";
         background-color: #002d73;
     }
-        .highlight-section .image-column .inner-column .image img{
+    .highlight-section .image-column .inner-column .image img{
         display: none;
         /* width:100%; */
         /* border-radius: 4px; *//* display: flex; */
-        /* height: 25vh; *//* justify-content: center; *//* align-items: center; */}
+        /* height: 25vh; *//* justify-content: center; *//* align-items: center; */
+    }
     .home .highlight-section .image-column{
         /* display: none !important; */
         display: flex;
         /* justify-content: center; */
         /* align-items: center; */
-        /* padding: 0 !important; */}
-
+        /* padding: 0 !important; */
+    }
     .highlight-section .image-column .inner-column{
         position:relative;
         /* padding: 20px 20px 0px 0px; */
