--- a/wp-content/themes/snf/styles/css/global.css
+++ b/wp-content/themes/snf/styles/css/global.css
@@ -479,7 +479,8 @@ Common Classes
 /*===================================================
     Inner Specific
 ======================================================*/
-.site-content .contact-bar .contact_bg_bar {
+@media(min-width:992px){
+    .site-content .contact-bar .contact_bg_bar {
     position: relative;
     display:flex;
     justify-content:center;
@@ -537,6 +538,70 @@ Common Classes
 }
 .flexible-layout .section-header a.btn-outline-light:hover{
     background-color: transparent;
+}
+
+}
+@media(max-width:991px){
+    .site-content .contact-bar .contact_bg_bar {
+    position: relative;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+.site-content .contact-bar .contact_bg_bar::before{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #191919;
+    opacity: .5;
+    border-radius: inherit;
+}
+.site-content section.contact-bar  {
+    display: none !important;
+    /* padding-top: 7rem; */
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+}
+.contact_bg_bar{
+    background-position:center;
+    background-size:cover;
+
+    background-attachment: fixed;
+    /* display: flex; */width: 100%;/* height: 100%; */}
+.site-content .contact-bar .section-header {
+    text-align: center;
+    padding: 3rem;
+    justify-content: center;
+    /* z-index: 99; */
+    position: relative;
+    /* height: 100%; */align-items: center;/* width: 100%; */}
+.site-content .contact_bg_bar .section-header a.btn:hover{
+    background-color:transparent !important;
+}
+.site-content .contact-bar .section-header h2{
+    z-index: 0;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 3.1rem;
+    padding: 1rem;text-shadow: 2px 4px 3px rgba(0,0,0,0.3);}
+.site-content .site-cta-container{
+}
+.flexible-layout .section-header a.btn-outline-light:hover{
+    background-color: transparent;
+}
+
 }
 
 /*===================================================
