--- a/wp-content/themes/snf/styles/css/gravity-overwrite.css
+++ b/wp-content/themes/snf/styles/css/gravity-overwrite.css
@@ -15,18 +15,39 @@
 }
 
 .gform_wrapper.gravity-theme .gfield input.large::-webkit-input-placeholder {
-	/* Chrome/Opera/Safari */
-  font-weight: 200;
+    /* Chrome/Opera/Safari */
+    font-weight: 200;
 }
-.gform_wrapper .gform_fields .gfield input::-moz-placeholder { 
-	/* Firefox 19+ */
-   font-weight: 200;
+.gform_wrapper .gform_fields .gfield input::-moz-placeholder {
+    /* Firefox 19+ */
+    font-weight: 200;
 }
 .gform_wrapper .gform_fields .gfield input:-ms-input-placeholder {
-	/* IE 10+ */
-   font-weight: 200;
+    /* IE 10+ */
+    font-weight: 200;
 }
 .gform_wrapper .gform_fields .gfield input:-moz-placeholder {
-	/* Firefox 18- */
+    /* Firefox 18- */
     font-weight: 200;
+}
+
+body .gform_wrapper .gform_footer input[type=submit] {
+    border: solid 1px #343a40 !important;
+    color: #343a40 !important;
+    display: inline-block !important;
+    font-weight: 400 !important;
+    /* color: #212529 !important; */
+    text-align: center !important;
+    vertical-align: middle !important;
+    -webkit-user-select: none !important;
+    -moz-user-select: none !important;
+    -ms-user-select: none !important;
+    user-select: none !important;
+    background-color: transparent !important;
+    /* border: 1px solid transparent !important; */
+    padding: 0.375rem 0.75rem !important;
+    font-size: 1rem !important;
+    line-height: 1.5 !important;
+    border-radius: 0.25rem !important;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
 }
