--- a/wp-content/themes/snf/styles/css/markets/markets-default.css
+++ b/wp-content/themes/snf/styles/css/markets/markets-default.css
@@ -91,7 +91,7 @@ IX.)
     .right-side-sidebar .sidebar li a{
         color: #212529;
         font-size: .85rem;font-weight: 600;
-    text-decoration: none;}
+        text-decoration: none;}
 }
 .sidebar-offcanvas .nav .nav.collapse,
 .sidebar-offcanvas .nav .nav.collapsing {
@@ -188,293 +188,297 @@ Cards
 
 ======================================================*/
 @nedua(max-width:991px){
-    
-        position: absolute;
-        top:0;
-        opacity: .64;
-        left:0;
-        height:100%;
-        border-radius: 4px;width: 100%;
-        padding:1.75rem;
-    }
-    .sidebar-market-contact .markets-contact-content{
-        z-index:15;
-        position:relative;
-        color:#fff;
-        display: block;
 
-        margin-left: auto;
-        margin-right: auto;
-        width: 100%;text-align: center;}
-    .sidebar-market-contact .sidebar-overlay{
-        position: absolute;
-        top:0;
-        opacity: .64;
-        left:0;
-        height:100%;
-        border-radius: 4px;width: 100%;
-        padding:1.75rem;
-    }
-    .sidebar-market-contact .markets-contact-content{
-        z-index:15;
-        position:relative;
-        color:#fff;
-        display: block;
+    position: absolute;
+    top:0;
+    opacity: .64;
+    left:0;
+    height:100%;
+    border-radius: 4px;width: 100%;
+    padding:1.75rem;
+}
+.sidebar-market-contact .markets-contact-content{
+    z-index:15;
+    position:relative;
+    color:#fff;
+    display: block;
 
-        margin-left: auto;
-        margin-right: auto;
-        width: 100%;text-align: center;}
-    .sidebar-market-contact .markets-contact-content h3{
-        text-shadow: 1px 1px #000;font-size: 1.15rem;
-        font-weight: 800;letter-spacing: .1rem;}
-    .sidebar-market-contact .markets-contact-content a{
-        font-weight:800;
-        border:solid 2px;
-        color: #f8f9fa;}
-    .left-side-sidebar {
-        padding-top: 5px;
-        padding-bottom: 5px;
-    }
-    .right-side-sidebar {
-        padding-top: 5px;
-        padding-bottom: 5px;
-        padding-left: 0;padding-right: 0;}
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;text-align: center;}
+.sidebar-market-contact .sidebar-overlay{
+    position: absolute;
+    top:0;
+    opacity: .64;
+    left:0;
+    height:100%;
+    border-radius: 4px;width: 100%;
+    padding:1.75rem;
+}
+.sidebar-market-contact .markets-contact-content{
+    z-index:15;
+    position:relative;
+    color:#fff;
+    display: block;
 
-    .right-side-sidebar .sidebar-widget h4{
-        font-size: 26px;
-        font-weight: 400;
-        text-transform: uppercase;
-        color: #002d73
-    }
-    .right-side-sidebar .sidebar-widget .heading{
-        display: block;
-        margin-bottom: 25px;
-        border-bottom: 1px dotted #e4e4e4;
-        background-color: transparent;
-        padding: 0;
-    }
-    .right-side-sidebar .sidebar-widget h4:before{
-        display: block;
-        left: 0;
-        top: 40px;
-        position: relative;
-        width: 30%;
-        height: 2px;
-        content: "";
-        background-color: #002d73;
-    }
-    .sidebar-widget{
-        padding-bottom: 10px;
-        border-radius: 4px;}
-    .sidebar-market-contact{
-        background-size:cover;
-        background-position:center;
-        height: 135px;
-        position:relative;
-        /* z-index:-1; */
-        display: flex;border-radius: 4px;justify-content: center;align-items: center;}
-    .sidebar-market-contact .sidebar-overlay{
-        position: absolute;
-        top:0;
-        opacity: .64;
-        left:0;
-        height:100%;
-        border-radius: 4px;width: 100%;
-        padding:1.75rem;
-    }
-    .sidebar-market-contact .markets-contact-content{
-        z-index:15;
-        position:relative;
-        color:#fff;
-        display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;text-align: center;}
+.sidebar-market-contact .markets-contact-content h3{
+    text-shadow: 1px 1px #000;font-size: 1.15rem;
+    font-weight: 800;letter-spacing: .1rem;}
+.sidebar-market-contact .markets-contact-content a{
+    font-weight:800;
+    border:solid 2px;
+    color: #f8f9fa;}
+.left-side-sidebar {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.right-side-sidebar {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    /* padding-left: 0; */
+    /* padding-right: 0; */
+}
 
-        margin-left: auto;
-        margin-right: auto;
-        width: 100%;text-align: center;}
-    .sidebar-market-contact .markets-contact-content h3{
-        text-shadow: 1px 1px #000;font-size: 1.15rem;
-        font-weight: 800;letter-spacing: .1rem;}
-    .sidebar-market-contact .markets-contact-content a{
-        font-weight:800;
-        border:solid 2px;
-        color: #f8f9fa;}
-    .sidebar-market-contact .markets-contact-content a:hover{
-        font-weight:800;
-        border:solid 2px #f8f9fa;
-        background-color: transparent;
-    }
-    #markets_carousel .card-img-top {
-        height: 20vw;
-    }
-    .flexible-card .traditional-card{
-        background-size: cover;
-        background-position: center;
-        height: 185px;
-    }
-    .flexible-card .card-tag{
-    }
-    .second-tier-nav .market_nav_elements ul li{
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        /* padding: 0; *//* line-height: 1.5; */}
-    .second-tier-nav .market_nav_elements ul li ul.dropdown-menu li a{
-        color:#002d73;
-        font-weight: 600;
-    }
-    .second-tier-nav .market_nav_elements ul li ul.dropdown-menu li{
-        display:block;
-        border-bottom: solid 1px #cecece;line-height: 45px;}
-    .second-tier-nav .market_nav_elements{
-        /* display:inline-flex; */
-        position:relative;
-        /* width:100%; */
-        /* height: 100%; */}
-    .second-tier-nav ul li{
-        display: inline-block;
-        /* font-size: 22px; */
+.right-side-sidebar .sidebar-widget h4{
+    font-size: 26px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #002d73
+}
+.right-side-sidebar .sidebar-widget .heading{
+    display: block;
+    margin-bottom: 25px;
+    border-bottom: 1px dotted #e4e4e4;
+    background-color: transparent;
+    padding: 0;
+}
+.right-side-sidebar .sidebar-widget h4:before{
+    display: block;
+    left: 0;
+    top: 40px;
+    position: relative;
+    width: 30%;
+    height: 2px;
+    content: "";
+    background-color: #002d73;
+}
+.sidebar-widget{
+    padding-bottom: 10px;
+    border-radius: 4px;}
+.sidebar-market-contact{
+    background-size:cover;
+    background-position:center;
+    height: 135px;
+    position:relative;
+    /* z-index:-1; */
+    display: flex;border-radius: 4px;justify-content: center;align-items: center;}
+.sidebar-market-contact .sidebar-overlay{
+    position: absolute;
+    top:0;
+    opacity: .64;
+    left:0;
+    height:100%;
+    border-radius: 4px;width: 100%;
+    padding:1.75rem;
+}
+.sidebar-market-contact .markets-contact-content{
+    z-index:15;
+    position:relative;
+    color:#fff;
+    display: block;
 
-        /* margin: 0; */
-        /* text-transform: uppercase; */
-        /* justify-content: center; */
-        /* align-items: center; */
-        /* background: transparent; */
-        position: relative;
-        /* width: auto; */
-        line-height: 1.2;
-    }
-    .second-tier-nav ul li ul li{
-        display:block;
-        /* padding: 7px .5rem; */
-    }
-   
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;text-align: center;}
+.sidebar-market-contact .markets-contact-content h3{
+    text-shadow: 1px 1px #000;font-size: 1.15rem;
+    font-weight: 800;letter-spacing: .1rem;}
+.sidebar-market-contact .markets-contact-content a{
+    font-weight:800;
+    border:solid 2px;
+    color: #f8f9fa;}
+.sidebar-market-contact .markets-contact-content a:hover{
+    font-weight:800;
+    border:solid 2px #f8f9fa;
+    background-color: transparent;
+}
+#markets_carousel .card-img-top {
+    height: 20vw;
+}
+.flexible-card .traditional-card{
+    background-size: cover;
+    background-position: center;
+    height: 185px;
+}
+.flexible-card .card-tag{
+}
+.second-tier-nav .market_nav_elements ul li{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    /* padding: 0; *//* line-height: 1.5; */}
+.second-tier-nav .market_nav_elements ul li ul.dropdown-menu li a{
+    color:#002d73;
+    font-weight: 600;
+}
+.second-tier-nav .market_nav_elements ul li ul.dropdown-menu li{
+    display:block;
+    border-bottom: solid 1px #cecece;line-height: 45px;}
+.second-tier-nav .market_nav_elements{
+    /* display:inline-flex; */
+    position:relative;
+    /* width:100%; */
+    /* height: 100%; */}
+.second-tier-nav ul li{
+    display: inline-block;
+    /* font-size: 22px; */
 
-    
-    .second-tier-nav ul li.active{
-        /* position: relative; */
-        /* padding: 0; */
+    /* margin: 0; */
+    /* text-transform: uppercase; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* background: transparent; */
+    position: relative;
+    /* width: auto; */
+    line-height: 1.2;
+}
+.second-tier-nav ul li ul li{
+    display:block;
+    /* padding: 7px .5rem; */
+}
 
 
-        /* border-radius: 0 !important; */
-    }
-   
-    .second-tier-nav ul li.active:before{
-        position:absolute;
-        left: 0%;
-        top: 0;
-        height: 100%;
-        /* content:""; */
-        /* clip-path: polygon(0 0, 79% 0, 87% 100%, 0% 100%); */
-        /* width: 7vw; */
-        /* background: rgb(249,176,0); */
-        /* margin-right: 5%; */
-    }
-    .second-tier-nav ul li:hover ul.children{
-        display: block;
-        position:absolute;
-        top: 100%;
-        left:0;
-        min-width:220px;
-        background-color: #fff;
-        width: 100%;padding: 0 .85rem;z-index: 5;
-        box-shadow: 0px 1px 2px #999;
-    }
-    .second-tier-nav ul li ul.children{
-        display: none;
-    }
-    #children-listing-sidebar{
-        position:relative;
-        z-index: 5;
-        /* overflow-x:hidden; */
-    }
-    .bg_image_card{
-        background-size:cover;
-        background-position: center;
-        height: 200px;
-    }
-    #markets_carousel .card-body h4{
-        font-weight:300;
-        color:#002d73;
-    }
-    #markets_carousel{
-        position:relative;
-        width:100%;
-        padding: 0;min-height: 80vh;}
-    .left-side-sidebar {
-        padding-top: 5px;
-        padding-bottom: 5px;
-    }
-    .right-side-sidebar {
-        padding-top: 5px;
-        padding-bottom: 5px;
-        padding-left: 0;padding-right: 0;}
 
-    .right-side-sidebar .sidebar-widget h4{
-        font-size: 26px;
-        font-weight: 400;
-        text-transform: uppercase;
-        color: #002d73
-    }
-    .right-side-sidebar .sidebar-widget .heading{
-        display: block;
-        margin-bottom: 25px;
-        border-bottom: 1px dotted #e4e4e4;
-        background-color: transparent;
-        padding: 0;
-    }
-    .right-side-sidebar .sidebar-widget h4:before{
-        display: block;
-        left: 0;
-        top: 40px;
-        position: relative;
-        width: 30%;
-        height: 2px;
-        content: "";
-        background-color: #002d73;
-    }
+.second-tier-nav ul li.active{
+    /* position: relative; */
+    /* padding: 0; */
+
+
+    /* border-radius: 0 !important; */
+}
+
+.second-tier-nav ul li.active:before{
+    position:absolute;
+    left: 0%;
+    top: 0;
+    height: 100%;
+    /* content:""; */
+    /* clip-path: polygon(0 0, 79% 0, 87% 100%, 0% 100%); */
+    /* width: 7vw; */
+    /* background: rgb(249,176,0); */
+    /* margin-right: 5%; */
+}
+.second-tier-nav ul li:hover ul.children{
+    display: block;
+    position:absolute;
+    top: 100%;
+    left:0;
+    min-width:220px;
+    background-color: #fff;
+    width: 100%;padding: 0 .85rem;z-index: 5;
+    box-shadow: 0px 1px 2px #999;
+}
+.second-tier-nav ul li ul.children{
+    display: none;
+}
+#children-listing-sidebar{
+    position:relative;
+    z-index: 5;
+    /* overflow-x:hidden; */
+}
+.bg_image_card{
+    background-size:cover;
+    background-position: center;
+    height: 200px;
+}
+#markets_carousel .card-body h4{
+    font-weight:300;
+    color:#002d73;
+}
+#markets_carousel{
+    position:relative;
+    width:100%;
+    padding: 0;min-height: 80vh;}
+.left-side-sidebar {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.right-side-sidebar {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    /* padding-left: 0; */
+    /* padding-right: 0; */
+}
+
+.right-side-sidebar .sidebar-widget h4{
+    font-size: 26px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #002d73
+}
+.right-side-sidebar .sidebar-widget .heading{
+    display: block;
+    margin-bottom: 25px;
+    border-bottom: 1px dotted #e4e4e4;
+    background-color: transparent;
+    padding: 0;
+}
+.right-side-sidebar .sidebar-widget h4:before{
+    display: block;
+    left: 0;
+    top: 40px;
+    position: relative;
+    width: 30%;
+    height: 2px;
+    content: "";
+    background-color: #002d73;
+}
 .sustain{
     display:none;
 }
-    .sidebar-widget{
-        padding-bottom: 10px;
-        border-radius: 4px;}
-    .sidebar-market-contact{
-        background-size:cover;
-        background-position:center;
-        height: 135px;
-        position:relative;
-        /* z-index:-1; */
-        display: flex;border-radius: 4px;justify-content: center;align-items: center;}
-    .sidebar-market-contact .sidebar-overlay{
-        position: absolute;
-        top:0;
-        opacity: .64;
-        left:0;
-        height:100%;
-        border-radius: 4px;width: 100%;
-        padding:1.75rem;
-    }
-    .sidebar-market-contact .markets-contact-content{
-        z-index:15;
-        position:relative;
-        color:#fff;
-        display: block;
+.sidebar-widget{
+    padding-bottom: 10px;
+    border-radius: 4px;}
+.sidebar-market-contact{
+    background-size:cover;
+    background-position:center;
+    height: 135px;
+    position:relative;
+    /* z-index:-1; */
+    display: flex;border-radius: 4px;justify-content: center;align-items: center;}
+.sidebar-market-contact .sidebar-overlay{
+    position: absolute;
+    top:0;
+    opacity: .64;
+    left:0;
+    height:100%;
+    border-radius: 4px;width: 100%;
+    padding:1.75rem;
+}
+.sidebar-market-contact .markets-contact-content{
+    z-index:15;
+    position:relative;
+    color:#fff;
+    display: block;
 
-        margin-left: auto;
-        margin-right: auto;
-        width: 100%;text-align: center;}
-    .sidebar-market-contact .markets-contact-content h3{
-        text-shadow: 1px 1px #000;font-size: 1.15rem;
-        font-weight: 800;letter-spacing: .1rem;}
-    .sidebar-market-contact .markets-contact-content a{
-        font-weight:800;
-        border:solid 2px;
-        color: #f8f9fa;}
-    .sidebar-market-contact .markets-contact-content a:hover{
-        font-weight:800;
-        border:solid 2px #f8f9fa;
-        background-color: transparent;
-    }
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;text-align: center;}
+.sidebar-market-contact .markets-contact-content h3{
+    text-shadow: 1px 1px #000;font-size: 1.15rem;
+    font-weight: 800;letter-spacing: .1rem;}
+.sidebar-market-contact .markets-contact-content a{
+    font-weight:800;
+    border:solid 2px;
+    color: #f8f9fa;}
+.sidebar-market-contact .markets-contact-content a:hover{
+    font-weight:800;
+    border:solid 2px #f8f9fa;
+    background-color: transparent;
+}
 }
 
 /*===================================================
@@ -618,7 +622,9 @@ Cards
     .right-side-sidebar {
         padding-top: 5px;
         padding-bottom: 5px;
-        padding-left: 0;padding-right: 0;}
+        /* padding-left: 0; */
+        /* padding-right: 0; */
+    }
 
     .right-side-sidebar .sidebar-widget h4{
         font-size: 26px;
@@ -806,13 +812,16 @@ Cards
         z-index: 5;
         /* overflow-x:hidden; */
     }
+    #markets_carousel .card-body p{
+        text-align:left !important;
+    }
     .bg_image_card{
         background-size:cover;
         background-position: center;
         height: 200px;
     }
     #markets_carousel .card-body h4{
-        font-weight:300;
+        font-weight: 500;
         color:#002d73;
     }
     #markets_carousel{
