--- a/wp-content/themes/snf/styles/css/typography.css
+++ b/wp-content/themes/snf/styles/css/typography.css
@@ -14,16 +14,20 @@ IX.)
 /*===================================================
     0.) Font Family
 ======================================================*/
+@font-face {
+    font-family: futura-pt-bold,sans-serif;
+    font-weight: 700;
+    font-style: italic;
+}
 h1,h2,h3,h4,h5,h6{
     font-family: var(--fontFamilyPrimary);
     font-weight: 700;
 }
 a,  li,  li a,  p, span, b, em, button, nav {
-    font-family: var(--fontFamilyPrimary);
+    font-family:'Source Sans Pro',  sans-serif;
     font-size: 1rem;
     /* color: #212529; */}
-#content h3{
-}
+
 a, li a, a button, p a{
     text-decoration:
             underline;
@@ -46,88 +50,177 @@ button, .btn, .btn-default, .btn-small{
 /*===================================================
     Headings in Body WYSIWYG h2,h3,h4,h5,h6
 ======================================================*/
-.subs-content h2, .subs-content h3{
-    margin: 1% 0;
-    /* text-transform: uppercase; */
-    color: #002d73;
-    position: relative;
-    display: block;
-    /* padding: 2px 0; */
-    /* border-bottom: 1px dotted #e4e4e4; */
-    /* padding: 0 0 0 0px; */
-}
-.subs-content h3{
-    font-size:1.35rem;
-}
-.subs-content ul{
-    padding: 0;
-}
-.flexible-layout ul{
-    line-height: 1.5em;
-    margin: 5px 0 15px;
-}
-.subs-content li{
-    text-align:left !important;
-}
-.flexible-layout li {
-    list-style: none;
-    position: relative;
-    padding: 0 0 0 20px;
-    text-align: justify;
-    font-size: 1rem;}
-.flexible-layout li::before {
-    content: "";
-    position: absolute;
-    left: 0px;
-    top: 3px;
-    width: 0;
-    height: 0;
-    border: 5px solid transparent;
-    border-bottom-color: var(--processBlueHEX, #0082CA);
-}
-.flexible-layout  li::after {
-    content: "";
-    position: absolute;
-    left: 0px;
-    top: 13px;
-    width: 0;
-    height: 0;
-    border: 5px solid transparent;
-    border-top-color: var(--processBlueHEX);
-}
-.flexible-layout hr {
+@media(min-width:768px){
+    .subs-content h2, .subs-content h3{
+        margin: 1% 0;
+        /* text-transform: uppercase; */
+        color: #002d73;
+        position: relative;
+        display: block;
+        /* padding: 2px 0; */
+        /* border-bottom: 1px dotted #e4e4e4; */
+        /* padding: 0 0 0 0px; */
+    }
+    .subs-content h3{
+        font-size:1.35rem;
+    }
+    .subs-content ul{
+        padding: 0;
+    }
+    .flexible-layout ul{
+        line-height: 1.5em;
+        margin: 5px 0 15px;
+    }
+    .subs-content li{
+        text-align:left !important;
+    }
+    .flexible-layout li {
+        list-style: none;
+        position: relative;
+        padding: 0 0 0 20px;
+        text-align: justify;
+        font-size: 1rem;}
+    .flexible-layout li::before {
+        content: "";
+        position: absolute;
+        left: 0px;
+        top: 3px;
+        width: 0;
+        height: 0;
+        border: 5px solid transparent;
+        border-bottom-color: var(--processBlueHEX, #0082CA);
+    }
+    .flexible-layout  li::after {
+        content: "";
+        position: absolute;
+        left: 0px;
+        top: 13px;
+        width: 0;
+        height: 0;
+        border: 5px solid transparent;
+        border-top-color: var(--processBlueHEX);
+    }
+    .flexible-layout hr {
 
+    }
+    .newsSidebarWrapper hr.center-diamond {
+        background-color: var( --processBlueHEX, #002d73);
+        border: 0;
+        height: 1px;
+        width: unset;
+        position: relative;
+        margin: 30px auto;
+        /* margin: 2% auto; */
+    }
+    hr.center-diamond {
+        background-color: var( --processBlueHEX, #002d73);
+        border: 0;
+        height: 1px;
+        width: 10%;
+        position: relative;
+        margin: 30px auto;
+        /* margin: 2% auto; */
+    }
+    hr.center-diamond:before {
+        content: "";
+        width: 15px;
+        height: 15px;
+        background: var( --processBlueHEX, #002d73);
+        display: inline-block;
+        border: none;
+        position: absolute;
+        top: -7px;
+        left: 50%;
+        margin: 0 0 0 -3px;
+        transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+    }
 }
-.newsSidebarWrapper hr.center-diamond {
-    background-color: var( --processBlueHEX, #002d73);
-    border: 0;
-    height: 1px;
-    width: unset;
-    position: relative;
-    margin: 30px auto;
-    /* margin: 2% auto; */
-}
-hr.center-diamond {
-    background-color: var( --processBlueHEX, #002d73);
-    border: 0;
-    height: 1px;
-    width: 10%;
-    position: relative;
-    margin: 30px auto;
-    /* margin: 2% auto; */
-}
-hr.center-diamond:before {
-    content: "";
-    width: 15px;
-    height: 15px;
-    background: var( --processBlueHEX, #002d73);
-    display: inline-block;
-    border: none;
-    position: absolute;
-    top: -7px;
-    left: 50%;
-    margin: 0 0 0 -3px;
-    transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
+@media(max-width:767px){
+    .subs-content h2, .subs-content h3{
+        margin: 1% 0;
+        /* text-transform: uppercase; */
+        color: #002d73;
+        position: relative;
+        display: block;
+        /* padding: 2px 0; */
+        /* border-bottom: 1px dotted #e4e4e4; */
+        /* padding: 0 0 0 0px; */
+    }
+    .subs-content h3{
+        font-size:1.35rem;
+    }
+    .subs-content ul{
+        padding: 0;
+    }
+    .flexible-layout ul{
+        line-height: 1.5em;
+        margin: 5px 0 15px;
+    }
+    .subs-content li{
+        text-align:left !important;
+    }
+    .flexible-layout li {
+        list-style: none;
+        position: relative;
+        padding: 0 0 0 20px;
+        text-align: justify;
+        font-size: 1rem;}
+    .flexible-layout li::before {
+        content: "";
+        position: absolute;
+        left: 0px;
+        top: 3px;
+        width: 0;
+        height: 0;
+        border: 5px solid transparent;
+        border-bottom-color: var(--processBlueHEX, #0082CA);
+    }
+    .flexible-layout  li::after {
+        content: "";
+        position: absolute;
+        left: 0px;
+        top: 13px;
+        width: 0;
+        height: 0;
+        border: 5px solid transparent;
+        border-top-color: var(--processBlueHEX);
+    }
+    .flexible-layout hr {
+
+    }
+    .newsSidebarWrapper hr.center-diamond {
+        background-color: var( --processBlueHEX, #002d73);
+        border: 0;
+        height: 1px;
+        width: unset;
+        position: relative;
+        margin: 30px auto;
+        /* margin: 2% auto; */
+    }
+    hr.center-diamond {
+        background-color: var( --processBlueHEX, #002d73);
+        border: 0;
+        height: 1px;
+        width: 10%;
+        position: relative;
+        margin: 30px auto;
+        /* margin: 2% auto; */
+    }
+    hr.center-diamond:before {
+        content: "";
+        width: 15px;
+        height: 15px;
+        background: var( --processBlueHEX, #002d73);
+        display: inline-block;
+        border: none;
+        position: absolute;
+        top: -7px;
+        left: 50%;
+        margin: 0 0 0 -3px;
+        transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+    }
 }
